# YAOP

./: .buildinfo  .pre-commit-config.yaml  CI.html  CMakeLists.txt  README.md  annotated.html  backend.html  backend_cpu.html  backend_gpu.html  backend_gpu_cuda.html  backend_gpu_hip.html  bindings.html  c_doxygen_tke.html  classTKE-members.html  classTKE.html  classTKE__backend-members.html  classTKE__backend.html  classTKE__cpu-members.html  classTKE__cpu.html  classTKE__cuda-members.html  classTKE__cuda.html  classTKE__gpu-members.html  classTKE__gpu.html  classYAOP-members.html  classYAOP.html  classcpu__mdspan__impl-members.html  classcpu__mdspan__impl.html  classcuda__launch__impl-members.html  classcuda__launch__impl.html  classcuda__mdspan__impl-members.html  classcuda__mdspan__impl.html  classes.html  clasship__launch__impl-members.html  clasship__launch__impl.html  clasship__mdspan__impl-members.html  clasship__mdspan__impl.html  cpp_doxygen_cpu_memory.html  cpp_doxygen_cuda_backend.html  cpp_doxygen_hip_backend.html  cpp_doxygen_sphinx.html  (+72 more)
.github/workflows/: build.yml  docs.yml  pre-commit.yml
_sources/: backend.rst.txt  backend_gpu.rst.txt  backend_gpu_cuda.rst.txt  backend_gpu_hip.rst.txt  bindings.rst.txt  cpp_doxygen_cpu_memory.rst.txt  cpp_doxygen_tke.rst.txt  cpp_doxygen_tke_backend.rst.txt  development.rst.txt  documentation.rst.txt  implementation.rst.txt  index.rst.txt  installation.rst.txt  interface.rst.txt  library.rst.txt  workflow.rst.txt
doc/source/: CI.rst  Doxyfile.in  backend.rst  backend_cpu.rst  backend_gpu.rst  backend_gpu_cuda.rst  backend_gpu_hip.rst  c_doxygen_tke.rst  conf.py  cpp_doxygen_cuda_backend.rst  cpp_doxygen_hip_backend.rst  cpp_doxygen_sphinx.rst  cpp_doxygen_tke_cpu.rst  cpp_doxygen_tke_gpu.rst  datastruct.rst  devinterface.rst  implementation.rst  index.rst  installation.rst  interface.rst  interface_ICON.rst  interface_TKE.rst  library.rst  testing.rst
examples/: CMakeLists.txt  example_basic.c  example_basic.cpp  example_basic.f90
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
src/: CMakeLists.txt  TKE.cpp  TKE.h  TKE.hpp  TKE_backend.cpp  TKE_backend.hpp  TKE_capi.cpp  TKE_cpu.cpp  TKE_cpu.hpp  TKE_cuda.cpp  TKE_cuda.cu  TKE_cuda.hpp  TKE_gpu.cpp  TKE_gpu.hpp  YAOP.cpp  YAOP.hpp  constants_thermodyn.hpp  cpu_memory.hpp  cuda_backend.hpp  cuda_check.cu  cuda_check.hpp  cuda_kernels.cu  cuda_kernels.hpp  cuda_memory.cu  cuda_memory.hpp  data_struct.cpp  data_struct.hpp  gpu_kernels.cpp  gpu_kernels.cu  gpu_kernels.hpp  memview_struct.hpp  mod_TKE.f90  utils.cpp  utils.hpp
src/backends/: TKE_backend.cpp  TKE_backend.hpp  kernels.cpp  kernels.hpp
src/backends/CPU/: TKE_cpu.cpp  TKE_cpu.hpp  cpu_kernels.cpp  cpu_kernels.hpp  cpu_memory.hpp
src/backends/GPU/: TKE_gpu.cpp  TKE_gpu.hpp  gpu_kernels.cpp  gpu_kernels.hpp
src/backends/GPU/CUDA/: cuda_backend.hpp  cuda_check.cu  cuda_check.hpp
src/backends/GPU/HIP/: hip_backend.hpp  hip_check.cpp  hip_check.hpp
src/bindings/C/: TKE.h  TKE_capi.cpp  YAOP.h  YAOP_capi.cpp
src/bindings/Fortran/: mod_TKE.f90  mod_YAOP.f90
src/shared/: assertion.hpp  utils.cpp  utils.hpp
src/shared/constants/: constants_thermodyn.hpp
src/shared/interface/: data_struct.cpp  data_struct.hpp  memview_struct.hpp
tests/: CMakeLists.txt  calc_diffusivity.cpp  calc_mxl_2.cpp  calculate_mxl_2.cpp  cpu_mdspan_impl.cpp  get_index_range.cpp
